--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,10 @@ project(movement)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  message_generation
+#  message_generation
   roscpp
   rospy
   std_msgs
-  tf
-  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
@@ -54,10 +52,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-   FILES
-   movement.srv
-)
+#add_service_files(
+#   FILES
+#   movement.srv
+#)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,10 +65,10 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-   DEPENDENCIES
-   std_msgs
- )
+#generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+# )
 
 ###################################
 ## catkin specific configuration ##
@@ -105,22 +103,16 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-add_executable(movement src/Main.cpp)
-add_dependencies(movement  ${catkin_EXPORTED_TARGETS})
-target_link_libraries(movement ${catkin_LIBRARIES})
-
-add_executable(transform src/transform.cpp)
-add_dependencies( transform ${catkin_EXPORTED_TARGETS})
-target_link_libraries( transform  ${catkin_LIBRARIES})
+# add_executable(movement_node src/movement_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(movement_node movement_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(movement
-   ${catkin_LIBRARIES}
- )
+# target_link_libraries(movement_node
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
